Bug 395866 font fallback does not respect stylesheet font list r=vlad, b1.9=stuart